# IT

./: 01_store_nodes.cpp  02_load_nodes.cpp  CMakeLists.txt  README.md  bigInteger_Rational.h  deque.h  geometry.h  main.cpp  matrix.h  string.h
List/: List_Allocator_Iterator_StrongExceptionSafaty.h  StackAllocator_StackStorage.h  stackallocator_test.cpp
Variant/: variant.h
metall_node_storage/: CMakeLists.txt  README.md
metall_node_storage/src/: BNodeBackend.cpp  BNodeBackend.hpp  IRIBackend.cpp  IRIBackend.hpp  LiteralBackend.cpp  LiteralBackend.hpp  MetallNodeStorageBackend.cpp  MetallNodeStorageBackend.hpp  VariableBackend.cpp  VariableBackend.hpp
shared_ptr/: smart_pointers.h  smartpointers_test.cpp
unordered_map/: unordered_map.h
